--- a/homepage.html
+++ b/homepage.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
+
+<div id = "header">
 <h1> Recommendation System </h1>
 
 <p> Enter a location and we will find local attractions for you! </p> 
 <br>
+</div>
 
+<div id = "selection">
 <form>
 <input type="checkbox" name="parks" value="Parks">Parks<br>
 <input type="checkbox" name="cinemas" value="Cinemas">Cinemas<br>
@@ -25,6 +29,15 @@
 <br>
 <input type="button" name="search" value="Search"><br>
 </form>
+</div>
+
+
+
+
+<div id = "map">
+
+</div>
+
 
 
 </body>
