linked style.css

--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-
+<link rel = "stylesheet" href="Style.css"> <!-- link style sheet-->
 <title> Recommendation system </title>
 
 </head>
