added text box for user input

--- a/homepage.html
+++ b/homepage.html
@@ -11,15 +11,20 @@
 
 <body>
 
-<div id = "header">
+<div id = "header" class="col-12" align="center">
 <h1> Recommendation System </h1>
 
 <p> Enter a location and we will find local attractions for you! </p> 
-<br>
+
+<div id = "input">	<label for "userInput" >Location: </label>
+	<input type="text" id="userInput"> </div>
+
 </div>
 
-<div id = "selection" class="col-100">
+<br>
 
+<div id = "selection" class="col-12" align="center">
+   
         <label for "parks" class="buttonStyle col-3" >Parks</label>
 		<input type="checkbox" id="parks">
 		
