--- a/homepage.html
+++ b/homepage.html
@@ -39,7 +39,7 @@
 		<input type="checkbox" id="pubs" onchange="checkBoxSelection('pubs', 'pubsLbl')">
 		
         <label for="museums" class="buttonStyle col-3" id = "MuseumsLbl">Museums</label>
-		<input type="checkbox" id="museums" onchange="checkBoxSelection('museums', 'museumsLbl')">
+		<input type="checkbox" id="museums" onchange="checkBoxSelection('museums', 'MuseumsLbl')">
 		
         <label for="gardens" class="buttonStyle col-3" id = "gardensLbl">Gardens</label>
 		<input type="checkbox" id="gardens" onchange="checkBoxSelection('gardens', 'gardensLbl')">
@@ -48,7 +48,7 @@
 		<input type="checkbox" id="castles" onchange="checkBoxSelection('castles', 'castlesLbl')">
 		
         <label for="leisurecentre" class = "buttonStyle col-3" id = "leiCenLbl">Leisure Centres</label>
-		<input type="checkbox" id="leisureCentre" onchange="checkBoxSelection('leisureCentre', 'leiCenLbl')">
+		<input type="checkbox" id="Centre" onchange="checkBoxSelection('Centre', 'leiCenLbl')">
 
 		<input type="button" id="searchBtn" value="Search" class = "col-8">
 
