fixed leisurecentre button error

--- a/homepage.html
+++ b/homepage.html
@@ -47,7 +47,7 @@
         <label for="castles" class="buttonStyle col-3" id = "castlesLbl">Castles</label>
 		<input type="checkbox" id="castles" onchange="checkBoxSelection('castles', 'castlesLbl')">
 		
-        <label for="leisurecentre" class = "buttonStyle col-3" id = "leiCenLbl">Leisure Centres</label>
+        <label for="Centre" class = "buttonStyle col-3" id = "leiCenLbl">Leisure Centres</label>
 		<input type="checkbox" id="Centre" onchange="checkBoxSelection('Centre', 'leiCenLbl')">
 
 		<input type="button" id="searchBtn" value="Search" class = "col-8">
