added basic google map - need to change location with SPARQL based on user input

--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,7 @@
 <head>
 <link rel = "stylesheet" href="Style.css"> <!-- link style sheet-->
 <script type="text/javascript" src="JavaScript.js"></script> <!--link Javascript doc-->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs-UURlhhvNfZvmawM1vuzc3F2zLfrcuk&callback=initMap"async defer></script><!--links google map API-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Recommendation system </title>
 
