--- a/homepage.html
+++ b/homepage.html
@@ -5,6 +5,8 @@
 <head>
 <link rel = "stylesheet" href="Style.css"> <!-- link style sheet-->
 <script type="text/javascript" src="JavaScript.js"></script> <!--link Javascript doc-->
+<meta name="viewport" content="initial-scale=5.0"> <!--sets zoom for google maps-->
+<meta charset="utf-8">
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs-UURlhhvNfZvmawM1vuzc3F2zLfrcuk&callback=initMap"async defer></script><!--links google map API-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Recommendation system </title>
@@ -57,8 +59,12 @@
 
 
 
+<div id = "map" class="col-7">
 
-<div id = "map" class="col-9">
+</div>
+
+<div id = "results" class="col-4">
+<u>Results: </u>
 
 </div>
 
