added SPARQL and javascript code to change location on googlemap API based on user input

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 
 <head>
 <link rel = "stylesheet" href="css/style.css"> <!-- link style sheet-->
-<script type="text/javascript" src="js/js.js"></script> <!--link Javascript doc-->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs-UURlhhvNfZvmawM1vuzc3F2zLfrcuk&callback=initMap"async defer></script><!--links google map API. "&callback=initMap" calls the initMap function-->
 <meta name="viewport" content="initial-scale=5.0"> <!--sets zoom for google maps-->
 <meta charset="utf-8">
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs-UURlhhvNfZvmawM1vuzc3F2zLfrcuk&callback=initMap"async defer></script><!--links google map API-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> Recommendation system </title>
 
@@ -65,6 +64,8 @@
 
 
 
+
+<script type="text/javascript" src="js/js.js"></script> <!--link Javascript doc-->
 </body>
 
 </html>
