--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@ Or...
 <div id = "selection" class="col-12" align="center">
 <label for="parks" class="buttonStyle col-3" id = "parksLbl">Parks</label>
 <input type="checkbox" id="parks" onchange="checkBoxSelection('parks', 'parksLbl')">
-<label for="cinemas" class="buttonStyle col-3" id ="cinemaLbl">Cinemas</label>
-<input type="checkbox" id="cinemas" onchange="checkBoxSelection('cinemas', 'cinemaLbl')">
-<label for="restaurants" class="buttonStyle col-3" id = "restaurantsLbl">Restaurants</label>
-<input type="checkbox" id="restaurants" onchange="checkBoxSelection('restaurants', 'restaurantsLbl')">
-<label for="pubs" class="buttonStyle col-3" id = "pubsLbl">Pubs</label>
-<input type="checkbox" id="pubs" onchange="checkBoxSelection('pubs', 'pubsLbl')">
+<label for="shopping" class="buttonStyle col-3" id ="shoppingLbl">Shopping Centres</label>
+<input type="checkbox" id="shopping" onchange="checkBoxSelection('shopping', 'shoppingLbl')">
+<label for="histBuild" class="buttonStyle col-3" id = "histBuildLbl">Historic Buildings</label>
+<input type="checkbox" id="histBuild" onchange="checkBoxSelection('histBuild', 'histBuildLbl')">
 <label for="museums" class="buttonStyle col-3" id = "MuseumsLbl">Museums</label>
 <input type="checkbox" id="museums" onchange="checkBoxSelection('museums', 'MuseumsLbl')">
-<label for="gardens" class="buttonStyle col-3" id = "gardensLbl">Gardens</label>
-<input type="checkbox" id="gardens" onchange="checkBoxSelection('gardens', 'gardensLbl')">
 <label for="castles" class="buttonStyle col-3" id = "castlesLbl">Castles</label>
 <input type="checkbox" id="castles" onchange="checkBoxSelection('castles', 'castlesLbl')">
+<label for="pubs" class="buttonStyle col-3" id = "pubsLbl">Pubs</label>
+<input type="checkbox" id="pubs" onchange="checkBoxSelection('pubs', 'pubsLbl')">
+<label for="gardens" class="buttonStyle col-3" id = "gardensLbl">Gardens</label>
+<input type="checkbox" id="gardens" onchange="checkBoxSelection('gardens', 'gardensLbl')">
 <label for="Centre" class = "buttonStyle col-3" id = "leiCenLbl">Leisure Centres</label>
 <input type="checkbox" id="Centre" onchange="checkBoxSelection('Centre', 'leiCenLbl')">
 </div>
