--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <link rel = "stylesheet" href="css/style.css"> <!-- link style sheet-->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs-UURlhhvNfZvmawM1vuzc3F2zLfrcuk&callback=initMap"async defer></script><!--links google map API. "&callback=initMap" calls the initMap function-->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs-UURlhhvNfZvmawM1vuzc3F2zLfrcuk"async defer></script><!--links google map API. "&callback=initMap" calls the initMap function-->
 <meta name="viewport" content="initial-scale=5.0"> <!--sets zoom for google maps-->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,32 +41,33 @@ Or...
 
 
 <div id = "selection" class="col-12" align="center">
-<label for="parks" class="buttonStyle col-3" id = "parksLbl">Parks</label>
-<input type="checkbox" id="parks" onchange="checkBoxSelection('parks', 'parksLbl')">
-<label for="shopping" class="buttonStyle col-3" id ="shoppingLbl">Shopping Centres</label>
-<input type="checkbox" id="shopping" onchange="checkBoxSelection('shopping', 'shoppingLbl')">
-<label for="histBuild" class="buttonStyle col-3" id = "histBuildLbl">Historic Buildings</label>
-<input type="checkbox" id="histBuild" onchange="checkBoxSelection('histBuild', 'histBuildLbl')">
-<label for="museums" class="buttonStyle col-3" id = "MuseumsLbl">Museums</label>
-<input type="checkbox" id="museums" onchange="checkBoxSelection('museums', 'MuseumsLbl')">
-<label for="castles" class="buttonStyle col-3" id = "castlesLbl">Castles</label>
-<input type="checkbox" id="castles" onchange="checkBoxSelection('castles', 'castlesLbl')">
-<label for="pubs" class="buttonStyle col-3" id = "pubsLbl">Pubs</label>
-<input type="checkbox" id="pubs" onchange="checkBoxSelection('pubs', 'pubsLbl')">
-<label for="gardens" class="buttonStyle col-3" id = "gardensLbl">Gardens</label>
-<input type="checkbox" id="gardens" onchange="checkBoxSelection('gardens', 'gardensLbl')">
-<label for="Centre" class = "buttonStyle col-3" id = "leiCenLbl">Leisure Centres</label>
-<input type="checkbox" id="Centre" onchange="checkBoxSelection('Centre', 'leiCenLbl')">
+	<label for="parks" class="buttonStyle col-3" id = "parksLbl">Parks</label>
+	<input type="checkbox" id="parks" onchange="checkBoxSelection('parks', 'parksLbl')">
+	<label for="shopping" class="buttonStyle col-3" id ="shoppingLbl">Shopping Centres</label>
+	<input type="checkbox" id="shopping" onchange="checkBoxSelection('shopping', 'shoppingLbl')">
+	<label for="histBuild" class="buttonStyle col-3" id = "histBuildLbl">Historic Buildings</label>
+	<input type="checkbox" id="histBuild" onchange="checkBoxSelection('histBuild', 'histBuildLbl')">
+	<label for="museums" class="buttonStyle col-3" id = "MuseumsLbl">Museums</label>
+	<input type="checkbox" id="museums" onchange="checkBoxSelection('museums', 'MuseumsLbl')">
+	<label for="castles" class="buttonStyle col-3" id = "castlesLbl">Castles</label>
+	<input type="checkbox" id="castles" onchange="checkBoxSelection('castles', 'castlesLbl')">
+	<label for="pubs" class="buttonStyle col-3" id = "pubsLbl">Pubs</label>
+	<input type="checkbox" id="pubs" onchange="checkBoxSelection('pubs', 'pubsLbl')">
+	<label for="gardens" class="buttonStyle col-3" id = "gardensLbl">Gardens</label>
+	<input type="checkbox" id="gardens" onchange="checkBoxSelection('gardens', 'gardensLbl')">
+	<label for="Centre" class = "buttonStyle col-3" id = "leiCenLbl">Leisure Centres</label>
+	<input type="checkbox" id="Centre" onchange="checkBoxSelection('Centre', 'leiCenLbl')">
 </div>
+<!-- END city dropdown -->
 
 
 
 <div id = "map">
-
+	<!-- Google Map loaded in via JavaScript -->
 </div>
 
 <div id = "results" class="col-4">
-<u>Results: </u>
+
 
 </div>
 
